# mcp-obsidian

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.llms/: FastMCP_docs.md
src/: .mcp_server_template.py
src/mcp_obsidian/: server.py
src/obsidian_mcp/: __init__.py  __main__.py  obsidian.py  server.py  tools.py
