[project]
name = "obsidian_mcp"
version = "1.6.2"
description = "MCP server to work with Obsidian via the Local REST plugin"
readme = "README.md"
authors = [
    { name = "study-flamingo", email = "jc214x@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.9.1",
    "requests>=2.32.3",
]
