[project]
name = "obsidian-mcp"
version = "1.7.0"
description = "MCP server to work with Obsidian using the Local REST community plugin."
readme = "README.md"
authors = [
    { name = "study-flamingo", email = "jc214x@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.9.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.9.1",
]
