[project]
name = "obsidian-mcp"
version = "1.7.0"
description = "MCP server to work with Obsidian using the Local REST community plugin."
readme = "README.md"
authors = [
    { name = "study-flamingo", email = "jc214x@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=2.8.1",
    "mcp>=1.9.4",
    "requests>=2.32.3",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.__main__:main"
